fix: overflow ellipsis

--- a/src/components/control/default.css
+++ b/src/components/control/default.css
@@ -61,6 +61,10 @@
     }
   }
 
+  > :where(input, select) {
+    white-space: nowrap;
+  }
+
   > :where(input, textarea) {
     &::placeholder {
       color: var(--x-control-placeholder-color);
